refactor: 변수명 명사-분사형으로 변경, getIfPresent 캐시 갱신 로직 추가